[project]
name = "speculative-chess-agentvfs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.60",
    "python-chess>=1.999",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
    "integration: requires AgentVFS, FUSE, and writable cgroup v2",
]
